--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,23 +1,25 @@
-jobscheduler:
-  build: .
-#  image: floedermann/jobscheduler:latest
-  links:
-    - db:mysql
-  volumes_from:
-    - datastore
-  ports:
-    - "4446:4446"
-    - "40444:40444"
-db:
-  image: mariadb:latest
-  environment:
-    MYSQL_USER: jobscheduler
-    MYSQL_PASSWORD: jobscheduler
-    MYSQL_ROOT_PASSWORD: scheduler
-    MYSQL_DATABASE: jobscheduler
+version: '3'
+services:
+  jobscheduler:
+    build: .
+#    image: floedermann/jobscheduler:latest
+    links:
+      - db:mysql
+    volumes_from:
+      - datastore
+    ports:
+      - "4446:4446"
+      - "40444:40444"
+  db:
+    image: mariadb:latest
+    environment:
+      MYSQL_USER: jobscheduler
+      MYSQL_PASSWORD: jobscheduler
+      MYSQL_ROOT_PASSWORD: scheduler
+      MYSQL_DATABASE: jobscheduler
 
-datastore:
-   image: busybox
-   command: /bin/true
-   volumes:
-     - /opt/jobscheduler/data/scheduler/config/live
+  datastore:
+     image: busybox
+     command: /bin/true
+     volumes:
+       - /opt/jobscheduler/data/scheduler/config/live
